--- a/templates/admin.html
+++ b/templates/admin.html
@@ -4,8 +4,10 @@
 
 <div class="container mt-4">
     <h1>Admin Panel</h1>
-    <a href="{{ url_for('add_vehicle') }}" class="btn btn-primary">Adicionar Novo Veículo</a>
-    <table class="table mt-4">
+    <a href="{{ url_for('add_vehicle') }}" class="btn btn-primary">Adicionar
+        Novo Veículo</a>
+    <h2 class="mt-4">Lista de Veículos</h2>
+    <table class="table mt-2">
         <thead>
             <tr>
                 <th scope="col">ID</th>
@@ -15,6 +17,7 @@
                 <th scope="col">Ano</th>
                 <th scope="col">Diária (€)</th>
                 <th scope="col">Status</th>
+                <th scope="col">Em Manutenção</th>
                 <th scope="col">Categoria</th>
                 <th scope="col">Ações</th>
             </tr>
@@ -28,19 +31,25 @@
                 <td>{{ vehicle.model }}</td>
                 <td>{{ vehicle.year }}</td>
                 <td>{{ vehicle.price_per_day }}</td>
-                <td>{% if vehicle.status %}Disponível{% else %}Indisponível{% endif %}</td>
+                <td>{% if vehicle.status %}Disponível{% else %}Indisponível{%
+                    endif %}</td>
+                <td>{% if vehicle.in_maintenance %}Sim{% else %}Não{% endif %}</td>
                 <td>{{ vehicle.categoria }}</td>
                 <td>
-                    <a href="{{ url_for('edit_vehicle', id=vehicle.id) }}" class="btn btn-sm btn-primary">Editar</a>
-                    <form method="post" class="d-inline-block">
+                    <a href="{{ url_for('edit_vehicle', id=vehicle.id) }}"
+                        class="btn btn-sm btn-primary">Editar</a>
+                    <form class="d-inline-block" method="post"
+                        action="{{ url_for('delete_vehicle', id=vehicle.id) }}">
                         <button type="submit" class="btn btn-sm btn-danger"
                             onclick="return confirm('Tens certeza que deseja excluir este veículo?')">Excluir</button>
                     </form>
-                    <form method="post" action="{{ url_for('maintenance_vehicle', id=vehicle.id) }}">
+                    <form method="post"
+                        action="{{ url_for('maintenance_vehicle', id=vehicle.id) }}">
                         <button type="submit" class="btn btn-sm btn-warning"
                             onclick="return confirm('Tens certeza que quer por este veículo em estado de manutenção?')">Manutenção</button>
                     </form>
                 </td>
+
             </tr>
             {% endfor %}
         </tbody>
