--- a/templates/admin.html
+++ b/templates/admin.html
@@ -13,7 +13,7 @@
     <div class="container mt-4">
         {% for message in messages %}
         <div class="alert alert-{{ message[0] }}">
-            {{ message }}
+            {{ message[1] }}
         </div>
         {% endfor %}
     </div>
@@ -71,7 +71,6 @@
                             name="maintenance"
                             onclick="return confirm('Tens certeza que quer por este veículo em estado de manutenção?')">Manutenção</button>
                     </form>
-                    <!-- Formulário para concluir a manutenção do veículo -->
                     {% endif %}
                 </td>
             </tr>
