--- a/templates/add_vehicle.html
+++ b/templates/add_vehicle.html
@@ -32,6 +32,19 @@
             <input type="number" step="0.01" class="form-control"
                 id="price_per_day" name="price_per_day" required>
         </div>
+        <div class="mb-3">
+            <label for="last_legalization_date" class="form-label">Última
+                Legalização</label>
+            <input type="date" class="form-control" id="last_legalization_date"
+                name="last_legalization_date" required>
+        </div>
+
+        <div class="mb-3">
+            <label for="next_legalization_date" class="form-label">Próxima
+                Legalização</label>
+            <input type="date" class="form-control" id="next_legalization_date"
+                name="next_legalization_date" required>
+        </div>
         <div class="d-flex justify-content-end mt-4">
             <a href="{{ url_for('admin_panel') }}"
                 class="btn btn-secondary me-2">Cancelar</a>
