--- a/templates/edit_vehicle.html
+++ b/templates/edit_vehicle.html
@@ -59,6 +59,17 @@
                 name="next_maintenance_date"
                 value="{{ vehicle.next_maintenance_date.strftime('%Y-%m-%d') if vehicle.next_maintenance_date else '' }}">
         </div>
+        <div class="mb-3">
+            <label for="last_legalization_date" class="form-label">Última Legalização</label>
+            <input type="date" class="form-control" id="last_legalization_date" name="last_legalization_date"
+                value="{{ vehicle.last_legalization_date|default('') }}" required>
+        </div>
+
+        <div class="mb-3">
+            <label for="next_legalization_date" class="form-label">Próxima Legalização</label>
+            <input type="date" class="form-control" id="next_legalization_date" name="next_legalization_date"
+                value="{{ vehicle.next_legalization_date|default('') }}" required>
+        </div>
         <div class="d-flex justify-content-end mt-4"></div>
             <a href="{{ url_for('admin_panel') }}" class="btn btn-secondary me-2">Cancelar</a>
             <button type="submit" class="btn btn-primary">Salvar</button>
