--- a/templates/admin.html
+++ b/templates/admin.html
@@ -73,35 +73,29 @@
                 </td>
                 <td>{{ vehicle.categoria }}</td>
                 <td>
-                    <a href="{{ url_for('edit_vehicle', id=vehicle.id) }}"
-                        class="btn btn-sm btn-primary">Editar</a>
-                    <form class="d-inline-block" method="post"
-                        action="{{ url_for('delete_vehicle', id=vehicle.id) }}">
+                    <a href="{{ url_for('view_vehicle', id=vehicle.id) }}" class="btn btn-sm btn-primary">Visualizar</a>
+                    <a href="{{ url_for('edit_vehicle', id=vehicle.id) }}" class="btn btn-sm btn-primary">Editar</a>
+                    <form class="d-inline-block" method="post" action="{{ url_for('delete_vehicle', id=vehicle.id) }}">
                         <button type="submit" class="btn btn-sm btn-danger"
                             onclick="return confirm('Tens certeza que deseja excluir este veículo?')">Excluir</button>
                     </form>
                     {% if vehicle.in_maintenance %}
-                    <form method="post"
-                        action="{{ url_for('maintenance_vehicle', id=vehicle.id) }}">
-                        <button type="submit" class="btn btn-sm btn-success"
-                            name="complete_maintenance" value="1">Concluir
+                    <form method="post" action="{{ url_for('maintenance_vehicle', id=vehicle.id) }}">
+                        <button type="submit" class="btn btn-sm btn-success" name="complete_maintenance"
+                            value="1">Concluir
                             Manutenção</button>
                     </form>
                     {% else %}
                     <!-- Formulário para enviar o veículo para manutenção -->
-                    <form method="post"
-                        action="{{ url_for('maintenance_vehicle', id=vehicle.id) }}">
-                        <button type="submit" class="btn btn-sm btn-warning"
-                            name="maintenance"
+                    <form method="post" action="{{ url_for('maintenance_vehicle', id=vehicle.id) }}">
+                        <button type="submit" class="btn btn-sm btn-warning" name="maintenance"
                             onclick="return confirm('Tens certeza que quer por este veículo em estado de manutenção?')">Manutenção</button>
                     </form>
                     <!-- Formulário para concluir a manutenção do veículo -->
                     {% endif %}
                     <!-- Formulário para concluir a legalização do veículo -->
-                    <form method="post"
-                        action="{{ url_for('legalize_vehicle', id=vehicle.id) }}">
-                        <button type="submit" class="btn btn-sm btn-info"
-                            name="legalize"
+                    <form method="post" action="{{ url_for('legalize_vehicle', id=vehicle.id) }}">
+                        <button type="submit" class="btn btn-sm btn-info" name="legalize"
                             onclick="return confirm('Confirmar que o veículo foi legalizado?')">Legalizado</button>
                     </form>
                 </td>
