--- a/templates/add_vehicle.html
+++ b/templates/add_vehicle.html
@@ -4,7 +4,7 @@
 
 <div class="container mt-4">
     <h1>Adicionar Novo Veículo</h1>
-    <form method="POST">
+    <form method="POST" enctype="multipart/form-data">
         <div class="mb-3">
             <label for="type" class="form-label">Tipo de Veículo</label>
             <select class="form-select" id="type" name="type" required>
@@ -29,14 +29,11 @@
             <input type="number" step="0.01" class="form-control" id="price_per_day" name="price_per_day" required>
         </div>
         <div class="mb-3">
-            <label for="last_legalization_date" class="form-label">Última
-                Legalização</label>
+            <label for="last_legalization_date" class="form-label">Última Legalização</label>
             <input type="date" class="form-control" id="last_legalization_date" name="last_legalization_date" required>
         </div>
-
         <div class="mb-3">
-            <label for="next_legalization_date" class="form-label">Próxima
-                Legalização</label>
+            <label for="next_legalization_date" class="form-label">Próxima Legalização</label>
             <input type="date" class="form-control" id="next_legalization_date" name="next_legalization_date" required>
         </div>
         <div class="form-group">
