implementação do upload de imagens

--- a/templates/edit_vehicle.html
+++ b/templates/edit_vehicle.html
@@ -8,8 +8,8 @@
         <div class="mb-3">
             <label for="type" class="form-label">Tipo de Veículo</label>
             <select class="form-select" id="type" name="type" required>
-                <option value="CARRO" {% if vehicle.type==VehicleType.CARRO %}selected{% endif %}>Carro</option>
-                <option value="MOTA" {% if vehicle.type==VehicleType.MOTA %}selected{% endif %}>Mota</option>
+                <option value="CARRO">Carro</option>
+                <option value="MOTA">Mota</option>
             </select>
         </div>
         <div class="mb-3">
