--- a/templates/admin.html
+++ b/templates/admin.html
@@ -73,7 +73,7 @@
                     {% endif %}
                 </td>
                 <td>
-                    <a href="{{ url_for('view_vehicle', id=vehicle.id) }}" class="btn btn-sm btn-primary">Visualizar</a>
+                    <a href="{{ url_for('view_vehicle', id=vehicle.id) }}" class="btn btn-sm btn-success">Visualizar</a>
                     <a href="{{ url_for('edit_vehicle', id=vehicle.id) }}" class="btn btn-sm btn-primary">Editar</a>
                     <form class="d-inline-block" method="post" action="{{ url_for('delete_vehicle', id=vehicle.id) }}">
                         <button type="submit" class="btn btn-sm btn-danger"
