--- a/templates/add_vehicle.html
+++ b/templates/add_vehicle.html
@@ -4,7 +4,7 @@
 
 <div class="container mt-4">
     <h1>Adicionar Novo Veículo</h1>
-    <form method="POST" enctype="multipart/form-data">
+    <form method="post" action="/add_vehicle" enctype="multipart/form-data">
         <div class="mb-3">
             <label for="type" class="form-label">Tipo de Veículo</label>
             <select class="form-select" id="type" name="type" required>
@@ -37,8 +37,8 @@
             <input type="date" class="form-control" id="next_legalization_date" name="next_legalization_date" required>
         </div>
         <div class="form-group">
-            <label for="image">Upload Vehicle Images</label>
-            <input type="file" class="form-control" id="image" name="image" multiple>
+            <label for="image">Imagens do veículo</label>
+            <input type="file" class="form-control" id="imagens" name="imagens" multiple>
         </div>
         <div class="d-flex justify-content-end mt-4">
             <a href="{{ url_for('admin_panel') }}" class="btn btn-secondary me-2">Cancelar</a>
