--- a/templates/edit_vehicle.html
+++ b/templates/edit_vehicle.html
@@ -3,7 +3,7 @@
 {% block content %}
 <div class="container mt-4">
     <h1>Editar Veículo</h1>
-    <form method="POST" enctype="multipart/form-data">
+    <form method="post" action="/edit_vehicle" enctype="multipart/form-data">
         <div class="mb-3">
             <label for="type" class="form-label">Tipo de Veículo</label>
             <select class="form-select" id="type" name="type" required>
@@ -48,9 +48,26 @@
             <input type="date" class="form-control" id="next_legalization_date" name="next_legalization_date"
                 value="{{ vehicle.next_legalization_date }}" required>
         </div>
+        <div class="mb-3">
+            <label for="current_images">Imagens Atuais do Veículo</label>
+            <div class="d-flex flex-wrap">
+                {% for image_path in vehicle.imagens.split(',') %}
+                <div class="m-2">
+                    <img src="{{ url_for('static', filename=image_path) }}" alt="Imagem do Veículo"
+                        style="max-width: 200px; max-height: 150px;">
+                    <a href="{{ url_for('delete_image', image_path=image_path, vehicle_id=vehicle.id) }}"
+                        class="btn btn-danger btn-sm mt-2">Apagar</a>
+                </div>
+                {% endfor %}
+            </div>
+        </div>
         <div class="form-group">
-            <label for="image">Upload Vehicle Images</label>
-            <input type="file" class="form-control" id="image" name="image" multiple>
+            <label for="new_images">Adicionar Novas Imagens</label>
+            <input type="file" class="form-control" id="new_images" name="new_images" multiple>
+        </div>
+        <div class="d-flex justify-content-end mt-4">
+            <a href="{{ url_for('admin_panel') }}" class="btn btn-secondary me-2">Cancelar</a>
+            <button type="submit" class="btn btn-primary">Salvar Alterações</button>
         </div>
         <div class="d-flex justify-content-end mt-4">
             <a href="{{ url_for('admin_panel') }}" class="btn btn-secondary me-2">Cancelar</a>
