--- a/templates/edit_vehicle.html
+++ b/templates/edit_vehicle.html
@@ -55,19 +55,15 @@
                 <div class="m-2">
                     <img src="{{ url_for('static', filename=image_path) }}" alt="Imagem do Veículo"
                         style="max-width: 200px; max-height: 150px;">
-                    <a href="{{ url_for('delete_image', image_path=image_path, vehicle_id=vehicle.id) }}"
+                    <a href="{{ url_for('delete_image', image_path=image_path, id=vehicle.id) }}"
                         class="btn btn-danger btn-sm mt-2">Apagar</a>
                 </div>
                 {% endfor %}
             </div>
         </div>
         <div class="form-group">
-            <label for="new_images">Adicionar Novas Imagens</label>
-            <input type="file" class="form-control" id="new_images" name="new_images" multiple>
-        </div>
-        <div class="d-flex justify-content-end mt-4">
-            <a href="{{ url_for('admin_panel') }}" class="btn btn-secondary me-2">Cancelar</a>
-            <button type="submit" class="btn btn-primary">Salvar Alterações</button>
+            <label for="imagens">Adicionar Novas Imagens</label>
+            <input type="file" class="form-control" id="imagens" name="imagens" multiple>
         </div>
         <div class="d-flex justify-content-end mt-4">
             <a href="{{ url_for('admin_panel') }}" class="btn btn-secondary me-2">Cancelar</a>
