--- a/templates/edit_vehicle.html
+++ b/templates/edit_vehicle.html
@@ -55,7 +55,7 @@
                 <div class="m-2">
                     <img src="{{ url_for('static', filename=image_path) }}" alt="Imagem do Veículo"
                         style="max-width: 200px; max-height: 150px;">
-                    <a href="{{ url_for('delete_image', image_path=image_path, id=vehicle.id) }}"
+                    <a href="{{ url_for('delete_image', image_path=image_path, vehicle_id=vehicle.id) }}"
                         class="btn btn-danger btn-sm mt-2">Apagar</a>
                 </div>
                 {% endfor %}
