implementação do upload de imagens

--- a/templates/edit_vehicle.html
+++ b/templates/edit_vehicle.html
@@ -7,9 +7,9 @@
     <form method="post" action="/edit_vehicle/{{ vehicle.id }}" enctype="multipart/form-data">
         <div class="mb-3">
             <label for="type" class="form-label">Tipo de Veículo</label>
-            <select class="form-select" id="type" name="type" required>
-                <option value="CARRO">Carro</option>
-                <option value="MOTA">Mota</option>
+            <select class="form-select" id="vehicle_type" name="vehicle_type">
+                <option value="CARRO" {% if vehicle.type==VehicleType.CARRO %}selected{% endif %}>Carro</option>
+                <option value="MOTA" {% if vehicle.type==VehicleType.MOTA %}selected{% endif %}>Mota</option>
             </select>
         </div>
         <div class="mb-3">
