--- a/templates/add_vehicle.html
+++ b/templates/add_vehicle.html
@@ -7,7 +7,7 @@
     <form method="post" action="/add_vehicle" enctype="multipart/form-data">
         <div class="mb-3">
             <label for="type" class="form-label">Tipo de Veículo</label>
-            <select class="form-select" id="type" name="type" required>
+            <select class="form-select" id="vehicle-type" name="vehicle-type" required>
                 <option value="CARRO">Carro</option>
                 <option value="MOTA">Mota</option>
             </select>
