--- a/templates/view_vehicle.html
+++ b/templates/view_vehicle.html
@@ -34,7 +34,8 @@
                 <div class="row">
                     {% for imagem_path in imagens_paths %}
                     <div class="col-md-4 mb-3">
-                        <img src="{{ url_for('static', filename='images/' ~ imagem_path) }}" alt="Imagem do Veículo">
+                        <img src="{{ url_for('static', filename='images/' ~ imagem_path) }}" alt="Imagem do Veículo"
+                            class="img-fluid img-thumbnail" style="max-height: 200px;">
                     </div>
                     {% endfor %}
                 </div>
