--- a/templates/edit_vehicle.html
+++ b/templates/edit_vehicle.html
@@ -4,6 +4,18 @@
 
 <div class="container mt-4">
     <h1>Editar Veículo</h1>
+    <!-- Adicionar a exibição de mensagens flash -->
+    {% with messages = get_flashed_messages() %}
+    {% if messages %}
+    <div class="container mt-4">
+        {% for message in messages %}
+        <div class="alert alert-{{ message[0] }}">
+            {{ message }}
+        </div>
+        {% endfor %}
+    </div>
+    {% endif %}
+    {% endwith %}
     <form method="post" action="/edit_vehicle/{{ vehicle.id }}" enctype="multipart/form-data">
         <div class="mb-3">
             <label for="vehicle_type" class="form-label">Tipo de Veículo</label>
@@ -62,8 +74,12 @@
                     <div class="d-flex flex-column align-items-center">
                         <img src="{{ url_for('static', filename='images/' ~ image_path) }}" alt="Imagem do Veículo"
                             class="img-fluid img-thumbnail" style="max-height: 200px;">
-                        <a href="{{ url_for('delete_image', image_path=image_path, vehicle_id=vehicle.id) }}"
-                            class="btn btn-danger btn-sm mt-2">Apagar</a>
+                        <form action="{{ url_for('delete_image', image_path=image_path, vehicle_id=vehicle.id) }}"
+                            method="POST">
+                            <input type="hidden" name="_method" value="DELETE">
+                            <button type="submit" class="btn btn-danger btn-sm mt-2">Apagar</button>
+                        </form>
+
                     </div>
                 </div>
                 {% endfor %}
