--- a/templates/edit_vehicle.html
+++ b/templates/edit_vehicle.html
@@ -61,6 +61,11 @@
             <input type="date" class="form-control" id="next_legalization_date" name="next_legalization_date"
                 value="{{ vehicle.next_legalization_date.strftime('%Y-%m-%d') }}" required>
         </div>
+        <div class="mb-3">
+            <label for="available_from" class="form-label">Disponível a partir de</label>
+            <input type="date" class="form-control" id="available_from" name="available_from"
+                value="{{ vehicle.available_from.strftime('%Y-%m-%d') if vehicle.available_from else '' }}">
+        </div>
         <div class="form-group">
             <label for="imagens">Imagens do veículo</label>
             <input type="file" class="form-control" id="imagens" name="imagens" multiple>
