--- a/templates/edit_vehicle.html
+++ b/templates/edit_vehicle.html
@@ -66,6 +66,11 @@
             <input type="date" class="form-control" id="available_from" name="available_from"
                 value="{{ vehicle.available_from.strftime('%Y-%m-%d') if vehicle.available_from else '' }}">
         </div>
+        <div class="mb-3">
+            <label for="max_uses_before_maintenance" class="form-label">Máximo de utilizações antes da manutenção</label>
+            <input type="number" class="form-control" id="max_uses_before_maintenance" name="max_uses_before_maintenance"
+                   value="{{ vehicle.max_uses_before_maintenance }}" required>
+        </div>
         <div class="form-group">
             <label for="imagens">Imagens do veículo</label>
             <input type="file" class="form-control" id="imagens" name="imagens" multiple>
