implementação do sistema de utilizações do veículo

--- a/templates/view_vehicle.html
+++ b/templates/view_vehicle.html
@@ -14,7 +14,7 @@
                     %}</p>
                 <p class="card-text"><strong>Disponível a partir de:</strong> {{ vehicle.available_from }}</p>
                 <p class="card-text"><strong>Número de Utilizações:</strong> {% if vehicle.num_uses %}{{ vehicle.num_uses }}{% else %} 0{% endif %}</p>
-                <p class="card-text"><strong>Em Manutenção:</strong> {% if vehicle.in_maintenance %}Yes{% else %}No{% endif
+                <p class="card-text"><strong>Em Manutenção:</strong> {% if vehicle.in_maintenance %}Sim{% else %}Não{% endif
                     %}</p>
                 <p class="card-text"><strong>Última Manutenção:</strong> {{ vehicle.last_maintenance_date }}</p>
                 <p class="card-text"><strong>Próxima Manutenção:</strong> {{ vehicle.next_maintenance_date }}</p>
