--- a/templates/base.html
+++ b/templates/base.html
@@ -41,6 +41,32 @@
         {% block content %}
         {% endblock %}
     </div>
+    <br>
+    <br>
+    <br>
+    <footer class="bg-dark text-light py-4">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-6">
+                    <h3>Contato</h3>
+                    <p>Telefone: (123) 456-7890</p>
+                    <p>Email: info@luxurywheels.com</p>
+                </div>
+                <div class="col-md-6">
+                    <h3>Redes Sociais</h3>
+                    <ul class="list-inline">
+                        <li class="list-inline-item"><a href="#"><i class="fab fa-facebook-f"></i></a></li>
+                        <li class="list-inline-item"><a href="#"><i class="fab fa-twitter"></i></a></li>
+                        <li class="list-inline-item"><a href="#"><i class="fab fa-instagram"></i></a></li>
+                        <li class="list-inline-item"><a href="#"><i class="fab fa-linkedin"></i></a></li>
+                    </ul>
+                </div>
+            </div>
+            <hr class="my-4">
+            <p class="text-center">© {{ current_year }} Luxury Wheels. Todos os direitos reservados.</p>
+        </div>
+    </footer>
+
 
     <!-- Script para o Bootstrap 5 e JS necessário -->
     <script src="{{ url_for('static', filename='bootstrap/js/bootstrap.min.js') }}"></script>
